fix permissions, add chat history