@@ -8,15 +8,12 @@ import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import technology.positivehome.ihome.ai.deepseek.DeepSeekClient;
-import technology.positivehome.ihome.ai.deepseek.model.ChatResponse;
-import technology.positivehome.ihome.ai.deepseek.model.Message;
-import technology.positivehome.ihome.ai.deepseek.model.ToolCall;
-import technology.positivehome.ihome.ai.deepseek.model.ToolDefinition;
+import technology.positivehome.ihome.ai.deepseek.model.*;
 import technology.positivehome.ihome.ai.mcp.McpToolAccessType;
 import technology.positivehome.ihome.ai.mcp.McpToolDefinition;
 import technology.positivehome.ihome.ai.mcp.McpToolExecutor;
 import technology.positivehome.ihome.ai.mcp.McpToolRegistry;
-import technology.positivehome.ihome.model.runtime.chat.ChatRequest;
+import technology.positivehome.ihome.model.runtime.chat.IHomeChatRequest;
 import technology.positivehome.ihome.model.runtime.module.ModuleSummary;
 import technology.positivehome.ihome.security.model.user.Role;
 import technology.positivehome.ihome.security.service.PermissionService;
@@ -79,8 +76,8 @@ public class ChatOrchestratorService {
      * @param authentication      the authenticated user
      * @return the final response text
      */
-    public String processMessage(List<ChatRequest.ChatMessage> conversationHistory, Authentication authentication) {
-        ChatRequest.ChatMessage lastMessage = conversationHistory.get(conversationHistory.size() - 1);
+    public String processMessage(List<IHomeChatRequest.ChatMessage> conversationHistory, Authentication authentication) {
+        IHomeChatRequest.ChatMessage lastMessage = conversationHistory.get(conversationHistory.size() - 1);
         log.info("Processing chat message from user '{}': {}", authentication.getName(), lastMessage.text());
 
         // Build the conversation with a fresh system prompt + UI-provided history
@@ -90,7 +87,7 @@ public class ChatOrchestratorService {
         // Inject the conversation history from the UI (excluding the last user message,
         // which is added below to keep it at the end of the conversation)
         for (int i = 0; i < conversationHistory.size() - 1; i++) {
-            ChatRequest.ChatMessage historyMsg = conversationHistory.get(i);
+            IHomeChatRequest.ChatMessage historyMsg = conversationHistory.get(i);
             Message deepSeekMsg = switch (historyMsg.role()) {
                 case "user" -> Message.user(historyMsg.text());
                 case "ai" -> Message.assistant(historyMsg.text());
@@ -129,7 +126,7 @@ public class ChatOrchestratorService {
                 return "I'm sorry, I couldn't process your request. Please try again.";
             }
 
-            ChatResponse.Choice choice = response.choices().get(0);
+            ChatResponse.Choice choice = response.choices().getFirst();
             Message assistantMessage = choice.message();
 
             // Check if the response is a tool call or final text
@@ -225,8 +222,7 @@ public class ChatOrchestratorService {
         } else if (isSupervisor) {
             roleDescription = """
                     You have supervisor-level access.
-                    You can view all system information and control supported devices.
-                    Note: Changing module operation modes (AUTO/MANUAL/OFF) requires administrator privileges.""";
+                    You can view all system information and control supported devices.""";
         } else {
             // For users without admin or supervisor (e.g., AUTHORIZED_GUEST, CHILDREN_ROOM*_MANAGER, UNDEFINED),
             // the module context below will provide (or omit) the module table based on their actual tool access.
@@ -249,6 +245,55 @@ public class ChatOrchestratorService {
                 Use module IDs when calling tools like getModuleData or updateModuleMode.
                 
                 %s
+                
+                ## Module Mode Reference
+                Each module has an operation mode shown in the table above:
+                
+                - **UNDEFINED mode**: The module's operation mode has not been explicitly set.
+                  Treat this as the initial/unconfigured state.
+                
+                - **MANUAL mode**: The system does NOT apply any automatic actions to this module.
+                  The module's output state is controlled only by direct user commands (via
+                  tool calls like updateModuleOutputState). If the module turns on or off,
+                  it was because you or the user explicitly requested it — not the system.
+                
+                - **AUTO mode**: The system CAN enable or disable this module automatically,
+                  depending on hardcoded conditions in the project (e.g., motion sensor
+                  triggers a light, temperature thresholds activate heating, time-based
+                  schedules for ventilation). While the system manages the module, you can
+                  still call getModuleData to read its current state or (if your access level
+                  allows) updateModuleOutputState to override it temporarily. Be aware that
+                  in AUTO mode, the system may later override the user's manual change based
+                  on its conditions.
+                
+                Important: Module mode can only be changed by administrators via the
+                updateModuleMode tool. Regular users can only see the mode and understand
+                whether a module is under automatic or manual control.
+                
+                ## Startup Mode Reference
+                Each module also has a **startup mode** shown in the "Startup" column of the
+                table above (ENABLED or DISABLED). This determines what happens when the
+                iHome system restarts:
+                
+                - **ENABLED**: On system restart, the module will be automatically turned on
+                  (output = POWERED). This is useful for devices that should always resume
+                  operation after a power outage or system reboot (e.g., heating pumps,
+                  ventilation, refrigerators).
+                  Some modules additionally enforce this: if they are in AUTO mode and the
+                  startup mode is ENABLED, the system will re-enable the output if it was
+                  manually turned off (checked periodically via cron tasks).
+                
+                - **DISABLED**: On system restart, the module will stay off (output = OFF).
+                  The user must explicitly turn it on after a reboot. This is safer for
+                  devices that should not resume automatically after a power event (e.g.,
+                  garage lights, non-critical loads).
+                
+                You can update a module's startup mode via the updateModuleProps tool
+                (controlled via the `enabledOnStartup` boolean field). Note:
+                - This change persists across restarts — it is saved to the database.
+                - It takes effect immediately AND on the next system restart.
+                - Changing startup mode does NOT change the current output state; it only
+                  changes behavior on the next restart (or cron re-enforcement in AUTO mode).
                 
                 You have access to tools that let you interact with the home automation system.
                 Use these tools to answer the user's questions about their home.
@@ -302,8 +347,8 @@ public class ChatOrchestratorService {
                 return "(No modules configured)";
             }
             StringBuilder sb = new StringBuilder();
-            sb.append("| ID | Name | Type | Mode | Output | Access |\n");
-            sb.append("|----|------|------|------|--------|--------|\n");
+            sb.append("| ID | Name | Type | Mode | Startup | Output | Access |\n");
+            sb.append("|----|------|------|------|---------|--------|--------|\n");
             boolean hasAnyModule = false;
             for (ModuleSummary m : modules) {
                 // Check per-module permissions
@@ -319,9 +364,9 @@ public class ChatOrchestratorService {
 
                 String type = m.getAssignment() != null ? m.getAssignment().name() : "UNKNOWN";
                 String modeLabel = switch (m.getMode()) {
-                    case 0 -> "AUTO";
+                    case 0 -> "UNDEFINED";
                     case 1 -> "MANUAL";
-                    case 2 -> "OFF";
+                    case 2 -> "AUTO";
                     default -> String.valueOf(m.getMode());
                 };
                 String outputLabel;
@@ -330,8 +375,9 @@ public class ChatOrchestratorService {
                 } else {
                     outputLabel = m.getOutputPortState() == 1 ? "POWERED" : "OFF";
                 }
-                sb.append("| %d | %s | %s | %s | %s | %s |\n"
-                        .formatted(m.getModuleId(), m.getName(), type, modeLabel, outputLabel, accessLabel));
+                String startupLabel = m.getStartupMode() == 1 ? "ENABLED" : "DISABLED";
+                sb.append("| %d | %s | %s | %s | %s | %s | %s |\n"
+                        .formatted(m.getModuleId(), m.getName(), type, modeLabel, startupLabel, outputLabel, accessLabel));
             }
             if (!hasAnyModule) {
                 return "(No accessible modules)";
